Min-height to fix wrapper without content layout problem

--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -6,6 +6,7 @@
 
     .hero {
       position: relative;
+      min-height: 13rem; // In case we have no content
 
       &__heading {
         max-width: 50%;
